Refactoring and Cleanup
Added CloudFormation template for SQS/IoT Core Policies

Added requirements.txt

Refactored test/app to use Env variables

Readme update

--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -3,7 +3,11 @@
   "app_name": "IoTLite",
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "DELETE_SQS_URL": "DeletionSQSURL",
+        "DELETE_SQS_NAME": "IoTLite-delete-queue"
+      }
     }
   }
 }
